# manim-Chemistry

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  README.md  TODO.md  et.mol  pyproject.toml  readthedocs.yaml  setup.py  test.py
.github/: pull_request_template.md
.github/workflows/: pull_request_template.md  tests.yml
assets/: Elements_EN.csv
docs/: .buildinfo  changelog.html  conf.py  index.rst  objects.inv  requirements.txt  requirements_dev.txt
docs/.doctrees/quickstart/: bohrdiagrams.doctree  getting-atom-and-bond-positions.doctree  index.doctree  utils.doctree
docs/.doctrees/reference_manual/: bohr_atoms.doctree  periodic_table.doctree
docs/_sources/: changelog.md.txt
docs/_sources/quickstart/: creating-a-periodic-table.md.txt
docs/contributing/: contact.html
docs/quickstart/: bohrdiagrams.html
docs/reference_manual/molecules/: mmolecules.html
docs/reference_manual/parsers/: json_parser.html
docs/source/: changelog.md  conf.py  features_table.md  index.md  license.md  philosophy.md
docs/source/contributing/: how_to_contribute.md  index.md
docs/source/quickstart/: drawing-a-molecule.md  getting-atom-and-bond-positions.md  installation.md  orbitals.md  utils.md
docs/source/reference_manual/: abstract_molecules.md  bohr_atoms.md  cli.md  graph_molecules.md  index.md  mc_molecules.md  mmolecules.md  periodic_table.md  three_d_molecules.md
docs_builder/source/: changelog.md
docs_builder/source/contributing/: index.md
examples/: examples.py
examples/element_files/: Elementos.csv  double_triple_bonds_molecule.mol  heme_2d.mol  heme_group.mol  morphine.mol  morphine.sdf  morphine3d.mol
examples/molecule_files/asnt_files/: acetone_2d.asnt  acetone_3d.asnt  heme_2d.asnt  heme_3d.asnt  morphine_2d.asnt  morphine_3d.asnt
examples/molecule_files/json_files/: acetone_2d.json  acetone_3d.json  heme_2d.json  heme_3d.json  morphine_2d.json  morphine_3d.json
examples/molecule_files/mol_files/: acetone_2d.mol  acetone_3d.mol  heme_2d.mol  heme_3d.mol
examples/molecule_files/sdf_files/: acetone_2d.sdf  acetone_3d.sdf  heme_2d.sdf  heme_3d.sdf  morphine_2d.sdf  morphine_3d.sdf
examples/molecule_files/xml_files/: acetone_2d.xml  acetone_3d.xml  heme_2d.xml  heme_3d.xml  morphine_2d.xml  morphine_3d.xml
src/manim_chemistry/: __init__.py  cli.py
src/manim_chemistry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/manim_chemistry/bohr_atom/: __init__.py  bohr_atom.py
src/manim_chemistry/element/: __init__.py  element.py
tests/: test_working.py
tests/animation_tests/: graph_molecule_animation_tests.py  run_animation_tests.py
tests/test_mc_classes/: test_mc_molecule.py
tests/test_molecules/: base_test_molecule.py
tests/test_parsers/: test_mol_parser.py
(+71 files in other folders)
